Broke image actions on mobile to motivate me to fix it :3

--- a/app/assets/stylesheets/image-actions.css.scss
+++ b/app/assets/stylesheets/image-actions.css.scss
@@ -41,6 +41,11 @@
     &:hover {
       color: rgba(#fff,1.0);
     }
+
+    @media all and (max-device-width: $mobile-width) {
+      width: auto;
+    }
+
   }
 
   @media all and (max-device-width: $mobile-width) {
@@ -58,7 +63,11 @@
   }
 
   @media all and (max-device-width: $mobile-width) {
-    padding: 10px 0 10px 45px;
+    padding: 10px;
+    overflow: hidden;
+    white-space: nowrap;
+    width: 40px;
+    height: 40px;
   }
 }
 
